# property-environment-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  repository.yaml
.github/workflows/: checks.yml
demo/: status.json
docs/: architecture.md  device-health-events-v1.md  device-health.md  privacy-and-safety.md
home_assistant/: device_health_events_package_v1.yaml.tmpl  device_health_package.yaml.tmpl
property_environment_manager/: CHANGELOG.md  Dockerfile  README.md  config.yaml  pyproject.toml  run.sh
property_environment_manager/src/property_environment_manager/: __init__.py  bootstrap.py  main.py  web.py
property_environment_manager/src/trv_regulator/: __init__.py  calendar_policy.py  config.py  controller.py  event_store.py  main.py  web.py
property_environment_manager/src/trv_regulator/ha/: __init__.py  client.py
property_environment_manager/src/ventilation_manager/: __init__.py  config.py  controller.py  event_store.py  humidity.py  main.py  web.py
property_environment_manager/src/ventilation_manager/ha/: client.py
tests/: test_active_control_safety.py  test_bootstrap.py  test_device_health_events_package.py  test_device_health_package.py  test_log_tools.py  test_trv_event_store.py  test_trv_regulator.py  test_ventilation_controller.py  test_ventilation_event_store.py  test_web_security.py
tools/: __init__.py  migrate_legacy_logs.py  sanitize_sqlite.py
