[project]
name = "property-environment-manager"
version = "0.1.0"
description = "Observer-first Home Assistant environmental automation for ventilation and TRV control"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
]

[project.scripts]
property-environment-manager = "property_environment_manager.main:cli"

[tool.pytest.ini_options]
pythonpath = ["property_environment_manager/src"]
