[project]
name = "property-environment-manager"
version = "0.2.1"
description = "Observer-first Home Assistant add-on for humidity ventilation and TRV heating policy"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
property-environment-manager = "property_environment_manager.main:cli"

[tool.pytest.ini_options]
pythonpath = ["property_environment_manager/src"]
